--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,8 +8,9 @@ li {
   float: left;
 }
 .c {
+  font-size: 30px;
+  font-weight: bold;
   float: right;
-  display: inline;
   padding-right: 550px;
   letter-spacing: 5px;
 }
@@ -72,7 +73,7 @@ h4 {
 /*レスポンシブデザイン*/
 @media screen and (max-width: 980px) {
   .a {
-    font-size: 11px;
+    font-size: 30px;
   }
   .c {
     font-size: 30px;
